--- a/metadata.yaml
+++ b/metadata.yaml
@@ -19,5 +19,7 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: Stephen H. Branch's Alligator Vol. 1 no.7, June 5, 1858
 url: http://www.gutenberg.org/ebooks/49051
